fix: pty alt buffer flashes
this also tightens up the REPL a bit; this is partly driven by the flash avoidance fix.
to avoid setting the background of repl in alt buffer mode (which we were doing to avoid
having too much "white space" to the left of the alt buffer emacs or vi), it is helpful
to tighten up the UI a bit, so that we can avoid the whitespace altogether.

this also makes the REPL look a bit more REPL-like

Fixes #1664

--- a/packages/app/web/css/left-tab-stripe.css
+++ b/packages/app/web/css/left-tab-stripe.css
@@ -193,20 +193,20 @@ body.subwindow .repl .horizontal-landing-zone {
     padding-top: 0;
 }
 .repl-input, .repl-output {
-    padding: 0 0 0 1em;
+    padding: 0 0 0 0.375rem;
     transition: padding 150ms ease-in-out;
 }
 .repl-result > div, .repl:not(.sidecar-visible) .repl-result .result-table-outer {
-    padding-right: 1em;
+    padding-right: 0.375rem;
 }
 .repl-prompt-right-elements {
-    padding-right: 1em;
+    padding-right: 0.375rem;
 }
 .repl.sidecar-visible .repl-input, .repl.sidecar-visible .repl-output {
-    padding-left: 1em;
+    padding-left: 0.375rem;
 }
 .repl.sidecar-visible .repl-output {
-    padding-right: 1em;
+    padding-right: 0.375rem;
 }
 
 #help-button.left-tab-stripe-button {
